Layout issues (datatable filter field +++)

--- a/gui/themes/default/assets/css/green.css
+++ b/gui/themes/default/assets/css/green.css
@@ -149,6 +149,7 @@ tbody td {
 
 input[type="text"],
 input[type="password"],
+input[type="search"],
 select,
 textarea {
     background: #ffffff;
@@ -157,12 +158,13 @@ textarea {
 
 input[type="text"]:focus,
 input[type="password"]:focus,
+input[type="search"]:focus,
 textarea:focus,
 select:focus {
     border: 1px solid #0e6e0e;
-    -webkit-box-shadow: 0 0 10px #0e6e0e;
-    -moz-box-shadow: 0 0 10px #0e6e0e;
-    box-shadow: 0 0 10px #0e6e0e;
+    -webkit-box-shadow: 0 0 5px #0e6e0e;
+    -moz-box-shadow: 0 0 5px #0e6e0e;
+    box-shadow: 0 0 5px #0e6e0e;
 }
 
 input[readonly="readonly"],
